progressif/main/default/objects/OfferOutcome__c/OfferOutcome__c.object-meta.xml
<CustomObject>
    <label>Objectif de l&#39;offre</label>
    <nameField>
        <label>Nom de l&#39;objectif de l&#39;offre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectifs de l&#39;offre</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>