progressif/main/default/objects/OfferOutcome__c/fields/AssociatedRateName__c.field-meta.xml
<CustomField>
    <fullName>AssociatedRateName__c</fullName>
    <description>Nom du tarif associé 
(en l&#39;état, nom de l&#39;objectif pour objectif de type tarif, nom de l&#39;objectif sans _UTILE pour objectif de type répartition)</description>
    <label>Nom du tarif associé</label>
    <length>50</length>
    <type>Text</type>
</CustomField>