progressif/main/default/objects/OfferOutcome__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <label>Offre</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Objectifs de l&#39;offre</relationshipLabel>
    <relationshipName>ChildOfferOutcome</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>