progressif/main/default/objects/OfferOutcome__c/fields/OutcomeType__c.field-meta.xml
<CustomField>
    <fullName>OutcomeType__c</fullName>
    <description>Décrit le type de lignes remontées par l&#39;objectif</description>
    <label>Type d&#39;objectif</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OutcomeType</valueSetName>
    </valueSet>
</CustomField>